feat: style update gallery and process

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -219,11 +219,11 @@ h5 {
     font-weight: 600;
 }
 
-.process-step-first-row, .process-step-second-row {
-  background: $color-bg-gradient-ligher;
-  border-radius: $border-radius-secondary;
-  box-shadow: $box-shadow-primary;
-}
+// .process-step-first-row, .process-step-second-row {
+//   background: $color-bg-gradient-ligher;
+//   border-radius: $border-radius-secondary;
+//   box-shadow: $box-shadow-primary;
+// }
 
 //
 // GALERRY
