--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -100,6 +100,10 @@ strong {
   font-weight: bolder;
 }
 
+.nav-link {
+  transition: color 0.2s ease;
+  transition: border-color 0.2s ease;
+}
 
 //Vue-easy-lightbox
 
@@ -352,6 +356,9 @@ h5 {
 #references .tab {
   background-color:$color-bg-primary;
   border-radius:  $border-radius-secondary $border-radius-secondary 0 0 ; 
+  transition: .4s all ease-in-out;
+  max-height: 315.47px;
+  animation-duration: 1.5s;
 }
 
 #references .active-tab {
@@ -367,15 +374,24 @@ color: $color-text;
 #references .nav-link {
   color: $tertiary;
 }
-#references .nav-link:hover {
-  color: $primary;
-}
 
 #references .active {
   color: $white;
 }
 
-#references .active:hover {
+#references .tab:hover {
+  cursor: pointer;
+}
+
+#references .tab:hover .nav-link{
+  color: $primary;
+}
+
+#references .tab:hover .nav-link{
+  color: $primary;
+}
+
+#references .active-tab:hover .nav-link {
   color: $white;
 }
 
@@ -411,6 +427,12 @@ color: $color-text;
   border-top: 5px solid $primary-transparent;
   border-radius: 5px;
   opacity: 1;
+}
+
+@include media-breakpoint-down(md) {
+  .reference-detail {
+    box-shadow: none;
+  } 
 }
 
 @include media-breakpoint-up(lg) {
