--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -127,7 +127,9 @@ strong {
 // NAVBAR
 // ----------------------------------------------------
 .navbar {
-    background: $color-bg-gradient
+    background: $color-bg-gradient;
+    position: sticky;
+    z-index: 99;
 }
 
 .navbar-nav .nav-link.active {
@@ -184,8 +186,14 @@ strong {
   }    
 }
 
-.carousel-btn{
-    margin-bottom: 3%;
+.carousel-btn-circle {
+    width: 0.8rem !important;
+    height: 0.8rem !important;
+    border-radius: 50%;
+    background-clip: unset !important;
+    border: none !important;
+    background-color: $primary !important;
+
 }
 
 #introduction .btn {
@@ -346,6 +354,8 @@ h5 {
     rgba(241, 239, 239, 0.8) 75%,
     rgba(241, 239, 239, 1) 100%
   );
+  position: sticky;
+  z-index: 50;
 }
 
 .centered {
