feat: contact form finalized validation and toast displaying

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -551,3 +551,11 @@ color: $color-text;
 .form-error-input{
   border-color: $color-error;
 }
+
+.toast-success svg {
+  color: $color-success !important;
+}
+
+.toast-error svg{
+  color: $color-error !important;
+}
