feat: add scrollspy

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -166,8 +166,10 @@ strong {
 //
 // INTRODUCTION
 // ----------------------------------------------------
+
 #introduction {
     background-color: $color-bg-primary;
+    scroll-margin-top: $scroll-margin-bigger;
 }
 
 #introduction p{
