--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -59,6 +59,9 @@ $scroll-margin-bigger: 19.508rem;
 $scroll-margin-smaller: 5.509rem;
 $scroll-margin-gallery: 30rem;
 
+$toast-background-color: rgba(var(--bs-body-bg-rgb), 1);
+$toast-header-background-color: rgba(var(--bs-body-bg-rgb), 1);
+
 
 //
 //BOOTSTRAP IMPORT
